# bicubic

./: Cargo.toml  README.md
src/: lib.rs  patch.rs  tests.rs
testing/: manual  plot.py
