[package]
name = "bicubic"
version = "0.1.0"
authors = ["Richard <grasbock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A base for bicubic interpolation"
repository = "https://github.com/GRASBOCK/makima_spline"
keywords = ["bicubic", "interpolation"]
categories = ["mathematics", "science"]
exclude = ["testing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]